@@ -1,5 +1,14 @@
 2007-12-07  Dan Williams  <dcbw@redhat.com>
 
+	Patch from Jani Monoses <jani@ubuntu.com>
+
+	* configure.ac
+	  src/main.c
+	  src/vpn-properties/Makefile.am
+		- Drop last libgnome dep for GTK > 2.10 (gnome.org #471967)
+
+2007-12-07  Dan Williams  <dcbw@redhat.com>
+
 	Noticed by Christian Persch <chpe@gnome.org>
 
 	* src/menu-items.c
